--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styls.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -58,7 +58,7 @@
             <div class="cards-grid">
                 <div class="conservation-card">
                     <div class="card-icon">
-                        <i class="bi bi-heart-pulse"></i>
+                        <i class="bi bi-heart-pulse-fill"></i>
                     </div>
                     <h3 class="card-title">Rescue</h3>
                     <p class="card-description">Care for vulnerable wildlife</p>
