scroll into/out of view effect for the navbar

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <p><strong>Thanda Wildlife Sanctuary</strong></p>
                         <p>Eastern Savanna Region<br>South Africa</p>
                         <p><i class="bi bi-telephone"></i> +27 21 000 0000</p>
-                        <p><i class="bi bi-envelope-at"></i> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="dcb5b2bab39ca8b4bdb2b8bdafbdb2bfa8f2b3aebb">[email&#160;protected]</a></p>
+                        <p><i class="bi bi-envelope-at"></i> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="dcb5b2bab39ca8b4bdb2b8bdafbdb2bfa8f2b3aebb">thanda.sanctuary@gmail.org</a></p>
                     </div>
                     <div class="social-icons">
                         <a href="#" aria-label="Facebook"><i class="bi bi-whatsapp"></i></a>
@@ -246,4 +246,10 @@
             </div>
             
             <div class="footer-bottom">
-                <p class="footer-copyright">© 2026. All Rights Reserved | <a href="#">Privacy Policy</a> | <a href="#">Terms &
+                <p class="footer-copyright">© 2026. All Rights Reserved | <a href="#">Privacy Policy</a> | <a href="#">Terms & Conditions</a></p>
+            </div>
+        </div>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
